--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run clean && vite build",
+    "build": "vite build",
+    "build1": "npm run clean && vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "clean": "rimraf ../server/public"
@@ -42,3 +43,5 @@
     "vite": "^5.0.8"
   }
 }
+
+
