--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "sweetalert2": "^11.11.0",
     "typeface-varela-round": "^1.1.13"
@@ -43,5 +44,3 @@
     "vite": "^5.0.8"
   }
 }
-
-
