--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-intersection-observer": "^9.10.3",
