--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "YG-DEVELOPMENT",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
@@ -18,7 +19,8 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
-    "mongoose-unique-validator": "^5.0.0"
+    "mongoose-unique-validator": "^5.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
