--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "clean": "rimraf ../server/public"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "crypto": "^1.0.1",
@@ -29,6 +30,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.11.0",
     "typeface-varela-round": "^1.1.13"
   },
